@@ -54,7 +54,7 @@ RspStringProduct(...)
 
 
  \bold{Methods inherited from RspProduct}:\cr
-findProcessor, getMetadata, getType, hasProcessor, print, process, setMetadata, view
+!, findProcessor, getMetadata, getType, hasProcessor, print, process, setMetadata, view
 
  \bold{Methods inherited from RspObject}:\cr
 getAttribute, getAttributes, hasAttribute, print, setAttribute, setAttributes
