@@ -4,6 +4,7 @@ Package: R.rsp
 Version: 0.12.2 [2013-12-15]
 o Now the code generated by RspRSourceCodeFactory provides a rmeta()
   function for getting and setting document metadata.
+o Added !() for RspProduct, which is a shortcut for view().
 
 
 Version: 0.12.1 [2013-12-14]
